--- a/Jack-and-Maurice-A.I/css/style.css
+++ b/Jack-and-Maurice-A.I/css/style.css
@@ -25,55 +25,35 @@ body {
   background-color: #915739;
   text-decoration: none;
   color: #fff;
-  font-size: 1.6rem;
+  font-size: 2rem;
   font-weight: 500;
-  padding: 1.6rem 3.2rem;
+  padding: 2.4rem 3.2rem;
   border-radius: 8px;
 }
 
 .deco {
   position: absolute;
-  width: 35rem;
+  width: 25rem;
   left: 0px;
-  top: 1632px;
+  top: 1495px;
 }
 
-.e-point {
-  position: absolute;
-  color: #000000;
-  font-size: 2rem;
+.left-black-full-deco {
+  background: left 3rem / 4rem no-repeat url("../img/Black-line-deco-1.webp");
 }
 
-.e-size-1 {
-  left: 125px;
-  top: 1134px;
-  font-size: 3.5rem;
+.right-black-full-deco {
+  background: right 1rem / 4rem no-repeat url("../img/Black-line-deco-2.webp");
 }
 
-.e-size-2 {
-  left: 178px;
-  top: 1345px;
-  font-size: 2rem;
+.full-white-deco {
+  background: left 5rem / 4rem no-repeat url("../img/White-line-deco-1.webp"),
+    right 1rem / 4rem no-repeat url("../img/White-line-deco-2.webp");
 }
 
-.e-size-3 {
-  left: 145px;
-  top: 1460px;
-  font-size: 3rem;
-  font-weight: 400;
-}
-
-.e-size-4 {
-  right: 1063px;
-  top: 1235px;
-  font-size: 2rem;
-  font-weight: 500;
-}
-
-.e-size-5 {
-  right: 965px;
-  top: 1336px;
-  font-size: 2.4rem;
+.empty-white-deco {
+  background: left 4.8rem / 4rem no-repeat url("../img/emprty-line-deco-1.webp"),
+    right 1rem / 4rem no-repeat url("../img/empty-line-deco-2.webp");
 }
 
 .btn-secondary {
@@ -117,6 +97,11 @@ body {
   line-height: 1.3;
   margin-bottom: 1rem;
   color: #ffffff;
+}
+
+.p-title {
+  position: relative;
+  top: 9rem;
 }
 
 .heading-secondary {
@@ -175,8 +160,8 @@ body {
 /****************************/
 .section-hero {
   padding: 12rem 0 9.6rem 9.6rem;
-  background: center/ contain no-repeat url(../img/Office\ Woman.png),
-    right/ contain no-repeat url(../img/Tech-el.png),
+  background: center/ contain no-repeat url(../img/office-woman.webp),
+    right/ contain no-repeat url(../img/tech-el.webp),
     linear-gradient(to bottom, rgb(42 41 41 / 100%), rgb(53 51 51 / 100%));
   height: 100vh;
   display: flex;
@@ -184,13 +169,14 @@ body {
 }
 
 .hero {
-  max-width: 90rem;
+  max-width: 65rem;
   padding: 6.4rem 0;
 }
 
 .hero-description {
   font-size: 2.4rem;
   line-height: 1.5;
+  padding-bottom: 3rem;
   margin-bottom: 4.8rem;
   color: #ffffff;
 }
@@ -259,6 +245,7 @@ body {
   line-height: 1.3;
   color: #000000;
 }
+
 .text-offer-accent {
   font-weight: 500;
   color: #000000;
@@ -291,19 +278,20 @@ body {
   position: absolute;
   z-index: 0;
   width: 25rem;
-  left: 345px;
-  top: 2635px;
+  left: 200px;
+  top: 2300px;
 }
+
 .maurice {
   position: absolute;
   z-index: 0;
   width: 25rem;
-  right: 357px;
-  top: 2634px;
+  right: 200px;
+  top: 2300px;
 }
 
 .pricing-container {
-  max-width: 130rem;
+  max-width: 125rem;
   margin: 0 auto;
   height: auto;
   display: flex;
@@ -311,16 +299,18 @@ body {
   align-items: center;
   padding: 5rem 1rem;
   gap: 2rem;
-  background: center / cover no-repeat url(../img/Tech-el.png),
+  background: center / cover no-repeat url(../img/tech-el.webp),
     linear-gradient(to bottom, #2a2929, rgb(53 51 51 / 100%));
   border-radius: 1.6rem;
 }
 
 .offers {
   display: flex;
-  gap: 5rem;
+  gap: 30rem;
+  align-items: center;
   padding-top: 11.5rem;
 }
+
 .box {
   position: relative;
   max-width: 50rem;
@@ -417,10 +407,11 @@ form {
   align-items: center;
   max-width: 40rem;
   border: solid 3px #915739;
-  padding-bottom: 4rem;
+  padding-bottom: 2rem;
   border-radius: 1.6rem;
   overflow: hidden;
 }
+
 form.form-style {
   display: table;
 }
@@ -453,7 +444,7 @@ label {
   background-color: #915739;
   font-size: 2rem;
   border: none;
-  height: 5rem;
+  height: 6.5rem;
   border-radius: 5px;
   color: #fff;
 }
@@ -508,98 +499,6 @@ label {
 /**************************/
 /* SCREEN ADJUSTMENT */
 /**************************/
-
-/**************************/
-/* 1440px (desktops) */
-/**************************/
-
-@media (max-width: 110em) {
-  .hero {
-    max-width: 65rem;
-  }
-
-  .deco {
-    position: absolute;
-    width: 25rem;
-    left: 0px;
-    top: 1565px;
-  }
-
-  .e-point {
-    position: absolute;
-    color: #000000;
-    font-size: 2rem;
-  }
-
-  .e-size-1 {
-    left: 80px;
-    top: 880px;
-    font-size: 3.5rem;
-  }
-
-  .e-size-2 {
-    left: 70px;
-    top: 1160px;
-    font-size: 2rem;
-  }
-
-  .e-size-3 {
-    left: 60px;
-    top: 1285px;
-    font-size: 3rem;
-    font-weight: 400;
-  }
-
-  .e-size-4 {
-    right: 820px;
-    top: 934px;
-    font-size: 2rem;
-    font-weight: 500;
-  }
-
-  .e-size-5 {
-    right: 795px;
-    top: 1100px;
-    font-size: 2.4rem;
-  }
-
-  .pricing-container {
-    max-width: 125rem;
-    margin: 0 auto;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 5rem 1rem;
-  }
-
-  .box {
-    max-width: 50rem;
-    border: solid 3px #fff;
-    padding: 2rem 4rem 3rem 4rem;
-    display: flex;
-    gap: 2.4rem;
-    flex-direction: column;
-    background-color: #555;
-    border-radius: 1.6rem;
-  }
-
-  .jack {
-    position: absolute;
-    z-index: 0;
-    width: 25rem;
-    left: 175px;
-    top: 2300px;
-  }
-  .maurice {
-    position: absolute;
-    z-index: 0;
-    width: 25rem;
-    right: 180px;
-    top: 2300px;
-  }
-}
-
 /**************************/
 /* BELOW 1440px (desktops) */
 /**************************/
@@ -607,87 +506,6 @@ label {
 @media (max-width: 90em) {
   .hero {
     max-width: 65rem;
-
-    .deco {
-      position: absolute;
-      width: 25rem;
-      left: 0px;
-      top: 1565px;
-    }
-
-    .e-point {
-      position: absolute;
-      color: #000000;
-      font-size: 2rem;
-    }
-
-    .e-size-1 {
-      left: 80px;
-      top: 980px;
-      font-size: 3.5rem;
-    }
-
-    .e-size-2 {
-      left: 70px;
-      top: 1260px;
-      font-size: 2rem;
-    }
-
-    .e-size-3 {
-      left: 60px;
-      top: 1345px;
-      font-size: 3rem;
-      font-weight: 400;
-    }
-
-    .e-size-4 {
-      right: 854px;
-      top: 1035px;
-      font-size: 2rem;
-      font-weight: 500;
-    }
-
-    .e-size-5 {
-      right: 795px;
-      top: 1187px;
-      font-size: 2.4rem;
-    }
-
-    .pricing-container {
-      max-width: 125rem;
-      margin: 0 auto;
-      height: auto;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 5rem 1rem;
-    }
-
-    .box {
-      max-width: 50rem;
-      border: solid 3px #fff;
-      padding: 2rem 4rem 3rem 4rem;
-      display: flex;
-      gap: 2.4rem;
-      flex-direction: column;
-      background-color: #555;
-      border-radius: 1.6rem;
-    }
-
-    .jack {
-      position: absolute;
-      z-index: 0;
-      width: 25rem;
-      left: 175px;
-      top: 2445px;
-    }
-    .maurice {
-      position: absolute;
-      z-index: 0;
-      width: 25rem;
-      right: 180px;
-      top: 2450px;
-    }
   }
 
   .deco {
@@ -695,44 +513,6 @@ label {
     width: 25rem;
     left: 0px;
     top: 1565px;
-  }
-
-  .e-point {
-    position: absolute;
-    color: #000000;
-    font-size: 2rem;
-  }
-
-  .e-size-1 {
-    left: 80px;
-    top: 980px;
-    font-size: 3.5rem;
-  }
-
-  .e-size-2 {
-    left: 70px;
-    top: 1260px;
-    font-size: 2rem;
-  }
-
-  .e-size-3 {
-    left: 60px;
-    top: 1345px;
-    font-size: 3rem;
-    font-weight: 400;
-  }
-
-  .e-size-4 {
-    right: 854px;
-    top: 1035px;
-    font-size: 2rem;
-    font-weight: 500;
-  }
-
-  .e-size-5 {
-    right: 795px;
-    top: 1187px;
-    font-size: 2.4rem;
   }
 
   .pricing-container {
@@ -773,30 +553,308 @@ label {
 }
 
 /**************************/
-/* BELOW 1344px (Smaller desktops) */
+/* BELOW 375px (mobile) */
 /**************************/
-@media (max-width: 84em) {
+
+@media (max-width: 23.438em) {
+  * {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
+
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 8rem;
+    padding: 0rem;
+    background-color: #2a2929;
+  }
+
+  .main-nav{
+    display: none;
+  }
+  .heading-primary {
+    text-align: center;
+    font-size: 3rem;
+  }
+
+  .heading-secondary {
+    text-align: left;
+    font-size: 2.5rem;
+    font-weight: 600;
+    line-height: 1.1;
+  }
+
+  .hero-description {
+    text-align: center;
+    font-size: 1rem;
+    line-height: 1.1;
+  }
+
+  .btn {
+    width: 30rem;
+    margin: 0 auto;
+  }
+
+  .services-section {
+    padding: 4rem 2rem;
+  }
+
+
+  .btn-tertiary {
+    max-width: 20.5rem;
+    background-color: #b7d63c;
+    text-decoration: none;
+    text-align: center;
+    margin: 0 auto;
+    color: #000000;
+    font-size: 2rem;
+    font-weight: 500;
+    padding: 1.6rem 3.2rem;
+    border-radius: 8px;
+  }
+
+  .section-hero {
+    padding: 0 0 0 0;
+    background: bottom / contain no-repeat url(../img/tech-el.webp),
+      linear-gradient(to bottom, rgb(42 41 41 / 100%), rgb(53 51 51 / 100%));
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .service-container-1 {
+    max-width: fit-content;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr, 0fr;
+  }
+
+  .services-img {
+    display: none;
+  }
+
+  .services-advantage {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+  }
+
+  .services-adv {
+    display: grid;
+    gap: 2rem;
+    grid-template-columns: repeat(2);
+    grid-template-rows: repeat(4, auto);
+    align-items: left;
+    justify-items: left;
+  }
+
+  .text-adv {
+    font-size: 2rem;
+    font-weight: 400;
+    text-align: left;
+  }
+
+  .text-adv-accent {
+    font-weight: 500;
+    color: #915739;
+    line-height: 1.1;
+    display: block;
+    text-align: left;
+  }
+
+  .second-offer-mb {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 2rem;
+  }
+
+  .service-container-2 {
+    padding: 0;
+  }
+
+  .second-offer-mb :nth-child(1) {
+    order: 1;
+  }
+
+  .second-offer-mb :nth-child(2) {
+    order: 4;
+  }
+
+  .second-offer-mb :nth-child(3) {
+    order: 7;
+  }
+  .second-offer-mb :nth-child(4) {
+    order: 2;
+  }
+  .second-offer-mb :nth-child(5) {
+    order: 5;
+  }
+
+  .second-offer-mb :nth-child(6) {
+    order: 8;
+  }
+  .second-offer-mb :nth-child(7) {
+    order: 3;
+  }
+  .second-offer-mb :nth-child(8) {
+    order: 6;
+  }
+  .second-offer-mb :nth-child(9) {
+    order: 9;
+  }
+
   .hero {
-    max-width: 60rem;
+    max-width: 65rem;
+    padding: 6.4rem 0;
+  }
+
+  .hero-description {
+    font-size: 2.4rem;
+    line-height: 1.5;
+    padding-bottom: 3rem;
+    margin-bottom: 4.8rem;
+    color: #ffffff;
+  }
+
+  .btn-tertiary {
+    min-width: 25rem;
+    background-color: #b7d63c;
+    text-decoration: none;
+    text-align: center;
+    margin: 0 auto;
+    color: #000000;
+    font-size: 2rem;
+    font-weight: 500;
+    padding: 1.6rem 0;
+    border-radius: 8px;
+  }
+
+  .deco {
+    display: none;
+  }
+
+  .pricing-section {
+    padding: 0;
+  }
+
+  .pricing-container {
+    max-width: 125rem;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20rem 1rem;
+    gap: 2rem;
+    background: center / cover no-repeat url(../img/tech-el.webp),
+      linear-gradient(to bottom, #2a2929, rgb(53 51 51 / 100%));
+    border-radius: 0rem;
+  }
+
+  .p-title {
+    position: relative;
+    top: -10rem;
+  }
+  .offers-mb {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .box {
+    position: relative;
+    max-width: 33rem;
+    border: solid 3px #fff;
+    padding: 2rem 3rem 3rem 3rem;
+    display: flex;
+    gap: 2.4rem;
+    flex-direction: column;
+    background-color: #555;
+    border-radius: 1.6rem;
+  }
+
+  .about-section {
+    padding: 4rem 2rem;
+  }
+  .about-container {
+    max-width: 110rem;
+    margin: 0 auto;
+    padding: 2.4rem 0;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .footer-container {
+    display: flex;
+    flex-direction: column;
   }
 
   .jack {
     position: absolute;
     z-index: 0;
-    width: 25rem;
-    left: 170px;
-    top: 2460px;
+    width: 30rem;
+    left: 30px;
+    top: 3320px;
   }
 
   .maurice {
     position: absolute;
     z-index: 0;
     width: 25rem;
-    right: 185px;
-    top: 2465px;
+    right: 50px;
+    top: 4800px;
   }
 
-  .heading-primary {
-    font-size: 4.4rem;
+  .ads {
+    display: flex;
+    gap: 3rem;
+    flex-direction: column;
+  }
+
+  .title-info {
+    text-align: center;
+    line-height: 1.1;
+    font-size: 3rem;
+    font-weight: 700;
+  }
+
+  .text-adv {
+    padding-top: 1rem;
+    text-align: center;
+    line-height: 1.1;
+  }
+
+  form {
+    max-width: 50rem;
+    border: solid 3px #915739;
+    padding-bottom: 1rem;
+  }
+
+  input {
+    width: 25rem;
+    height: 3rem;
+  }
+
+  .submit-btn {
+    background-color: #915739;
+    font-size: 2rem;
+    border: none;
+    height: 6.5rem;
+    border-radius: 5px;
+    color: #fff;
+  }
+  .part-one {
+    row-gap: 2rem;
+    gap: 1rem;
+  }
+  .part-two {
+    text-align: center;
+  }
+
+  .img-dec {
+    margin-bottom: 4rem;
   }
 }
