--- a/Jack-and-Maurice-A.I/css/style.css
+++ b/Jack-and-Maurice-A.I/css/style.css
@@ -626,11 +626,11 @@ label {
     text-align: center;
   }
 
-  .service-container-1 {
+  .services-container-1 {
     max-width: fit-content;
     margin: 0 auto;
     display: grid;
-    grid-template-columns: 1fr, 0fr;
+    grid-template-columns: 1fr;
   }
 
   .services-img {
@@ -656,6 +656,8 @@ label {
     font-size: 2rem;
     font-weight: 400;
     text-align: left;
+    padding-top: 1rem;
+    line-height: 1.1;
   }
 
   .text-adv-accent {
@@ -820,12 +822,6 @@ label {
     line-height: 1.1;
     font-size: 3rem;
     font-weight: 700;
-  }
-
-  .text-adv {
-    padding-top: 1rem;
-    text-align: center;
-    line-height: 1.1;
   }
 
   form {
