--- a/Jack-and-Maurice-A.I/css/style.css
+++ b/Jack-and-Maurice-A.I/css/style.css
@@ -565,14 +565,14 @@ label {
 
   .header {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     height: 8rem;
     padding: 0rem;
     background-color: #2a2929;
   }
 
-  .main-nav{
+  .main-nav {
     display: none;
   }
   .heading-primary {
@@ -599,9 +599,9 @@ label {
   }
 
   .services-section {
+    max-height: max-content;
     padding: 4rem 2rem;
   }
-
 
   .btn-tertiary {
     max-width: 20.5rem;
@@ -618,8 +618,11 @@ label {
 
   .section-hero {
     padding: 0 0 0 0;
-    background: bottom / contain no-repeat url(../img/tech-el.webp),
-      linear-gradient(to bottom, rgb(42 41 41 / 100%), rgb(53 51 51 / 100%));
+    background: linear-gradient(
+      to bottom,
+      rgb(42 41 41 / 100%),
+      rgb(53 51 51 / 100%)
+    );
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -648,16 +651,13 @@ label {
     gap: 2rem;
     grid-template-columns: repeat(2);
     grid-template-rows: repeat(4, auto);
-    align-items: left;
-    justify-items: left;
   }
 
   .text-adv {
     font-size: 2rem;
     font-weight: 400;
-    text-align: left;
-    padding-top: 1rem;
     line-height: 1.1;
+    text-align: left;
   }
 
   .text-adv-accent {
@@ -800,7 +800,7 @@ label {
     z-index: 0;
     width: 30rem;
     left: 30px;
-    top: 3320px;
+    top: 3120px;
   }
 
   .maurice {
@@ -808,7 +808,7 @@ label {
     z-index: 0;
     width: 25rem;
     right: 50px;
-    top: 4800px;
+    top: 4600px;
   }
 
   .ads {
